--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -10,7 +10,7 @@ required:
 
 # Github repos
 catalog-api-repo:
-  service_id: githubpublic
+  service_id: githubpublic1
   parameters:
     repo_name: "{{github.parameters.catalog-api-repo_name}}"
     repo_url: "{{github.parameters.catalog-api-repo_url}}"
