--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -11,7 +11,7 @@ repo:
     repo_url: "https://elo.com"
     type: clone
     has_issues: false
-  hidden: [form, description]
+  hidden: [form]
 
 # Pipelines
 build:
@@ -29,7 +29,7 @@ build:
         REGION_ID: "region"
       execute: true
     services: ["repo"]
-  hidden: [form, description]
+  hidden: [form]
 
 #Web IDE
 webide:
