--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -5,10 +5,10 @@ version: 0.2
 
 # Github repos
 repo:
-  service_id: githubpublic
+  service_id: github
   parameters:
     repo_name: "{{name}}"
-    repo_url: "https://elo.com"
+    repo_url: "https://github.com/szbra/toolchain-demo-1"
     type: clone
     has_issues: false
   hidden: [form]
@@ -17,7 +17,7 @@ repo:
 build:
   service_id: pipeline
   parameters:
-    name: "ui-{{name}}"
+    name: "{{name}}"
     ui-pipeline: true
     configuration:
       content: $file(pipeline.yml)
@@ -34,3 +34,11 @@ build:
 #Web IDE
 webide:
   service_id: orion
+  
+#Github
+github:
+  schema: github.json
+  service-category: github
+  parameters:
+    repo_name: "{{name}}"
+    repo_url: https://github.com/szbra/toolchain-demo-1
